# cfx-storage2

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
amt/: Cargo.toml
amt/src/: deferred_verification.rs  ec_algebra.rs  error.rs  lib.rs  power_tau.rs  proofs.rs  utils.rs  verify_params.rs
amt/src/blob/: encode.rs  verify.rs
amt/src/prove_params/: fast_serde_bn254.rs  generate.rs  interfaces.rs  mod.rs  prove.rs  serde.rs  tests.rs  verify.rs
bellman/src/: log.rs
bellman/src/groth16/: mod.rs
dev_support/: build_params_bls.rs  download_ppot_bls.rs  gen_test_ppot.sh  test.sh
pairing/src/: lib.rs
powersoftau/src/: batched_accumulator.rs
ppot/: Cargo.toml
ppot2ark/: Cargo.toml  gen_test_ppot.sh
ppot2ark/src/: config_bls.rs  config_bn.rs  main.rs
src/: errors.rs  example.rs  lib.rs  macros.rs  storage.rs  traits.rs  types.rs
src/backends/: mod.rs  serde.rs  table.rs  table_name.rs
src/backends/impls/: in_memory_db.rs  kvdb_rocksdb.rs  mod.rs
src/backends/write_schema/: no_sub_key.rs
src/in_memory_tree/: Cargo.toml
src/in_memory_tree/src/: commit_tree.rs  error.rs  lib.rs  versioned_hash_map.rs
src/lvmt/: amt_change_manager.rs  auth_changes.rs  crypto.rs  example.rs  mod.rs  snapshot.rs  storage.rs  table_schema.rs  tests.rs
src/lvmt/amt/: ec_algebra.rs  error.rs  mod.rs  power_tau.rs  utils.rs  verify_params.rs
src/lvmt/amt/ppot2ark/: adapter.rs  adapter_bls.rs  config_bls.rs  config_bn.rs  mod.rs
src/lvmt/amt/prove_params/: fast_serde_bls12_381.rs  fast_serde_bn254.rs  generate.rs  mod.rs  prove.rs  serde.rs  tests.rs  verify.rs
src/lvmt/types/: allocation.rs  curve_point.rs  lvmt_value.rs  mod.rs  node_id.rs
src/lvmt/types/allocation/: allocate_position.rs  key_info.rs
src/lvmt/types/auth_changes/: item.rs  key.rs  mod.rs  node.rs
src/middlewares/: commit_id_schema.rs  key_value_store_bulks.rs  mod.rs
src/middlewares/versioned_flat_key_value/: history_indices_cache.rs  history_indices_table.rs  key_value_store_manager_impl.rs  manager_impl.rs  mod.rs  serde.rs  table_schema.rs  tests.rs
src/middlewares/versioned_flat_key_value/history_indices/: mod.rs  one_range.rs  serde.rs
src/middlewares/versioned_flat_key_value/pending_part/: commit_tree.rs  confirmed_part.rs  current_map.rs  error.rs  mod.rs  pending_schema.rs  versioned_hash_map.rs  versioned_map.rs
src/middlewares/versioned_flat_key_value/pending_part/tree/: add_node.rs  add_node_commands.rs  add_node_support.rs  change_root.rs  change_root_commands.rs  change_root_support.rs  checkout.rs  checkout_commands.rs  commands.rs  key_value_store_manager_support.rs  mod.rs  node.rs
src/pending_part/src/: commit_tree.rs  versioned_hash_map.rs
src/utils/: hash.rs
storage/: Cargo.toml
storage/src/: errors.rs  lib.rs  traits.rs
storage/src/backends/: mod.rs  table_name.rs
storage/src/backends/impls/: in_memory_db.rs  kvdb_rocksdb.rs
storage/src/backends/write_schema/: mod.rs  no_sub_key.rs
storage/src/lvmt/: amt_change_manager.rs  auth_changes.rs  crypto.rs  mod.rs  storage.rs  tests.rs
storage/src/lvmt/amt/: deferred_verification.rs  mod.rs  proofs.rs
storage/src/lvmt/amt/prove_params/: mod.rs  tests.rs
storage/src/lvmt/types/: lvmt_value.rs  mod.rs
storage/src/lvmt/types/allocation/: allocate_position.rs  mod.rs
storage/src/middlewares/: commit_id_schema.rs  key_value_store_bulks.rs  mod.rs
storage/src/middlewares/versioned_flat_key_value/: manager_impl.rs  mod.rs  serde.rs  tests.rs
storage/src/middlewares/versioned_flat_key_value/pending_part/: error.rs  mod.rs  pending_schema.rs  versioned_map.rs
storage/src/middlewares/versioned_flat_key_value/pending_part/tree/: change_root.rs
storage/src/utils/: macros.rs  mod.rs
