[package]
name = "cfx-storage2"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "1"
auto_impl = "1.2"

#kvdb-rocksdb = { git = "https://github.com/Conflux-Chain/parity-common-rocksdb", rev = "3fcd845", version = "0.19.0" }
#kvdb = { git = "https://github.com/Conflux-Chain/parity-common-rocksdb", rev = "3fcd845" }

kvdb-rocksdb = { git = "https://github.com/Conflux-Chain/parity-common-rocksdb", rev = "507a6f8", version = "0.17.0-iter-nochecksum-partitionedindexfilter" }
kvdb = { git = "https://github.com/Conflux-Chain/parity-common-rocksdb", rev = "507a6f8" }

parking_lot = "0.12"

tinyvec = "1.8"

ark-ec = "0.5"
ark-ff = "0.5"
ark-poly = "0.5"
ark-serialize = "0.5"
ark-bls12-381 = "0.5"
ark-std = "0.5"

ethereum-types = "0.12"

blake2 = "0.10"

slab = "0.4.9"

static_assertions = "1.1.0"

itertools = "0.13"

proptest = "1.5"

amt = { git = "https://github.com/Conflux-Chain/amt", rev = "828c4c6", features = ["bls12-381"] }

once_cell = "1.19"
asb-tasks = { git = "https://github.com/rongma7/authenticated-storage-benchmarks", rev = "de5461d" }
asb-options = { git = "https://github.com/rongma7/authenticated-storage-benchmarks", rev = "de5461d" }
fs_extra = "1.2.0"

pprof = { version = "0.14", features = ["protobuf", "prost-codec"] }
asb-profile = { git = "https://github.com/rongma7/authenticated-storage-benchmarks", rev = "de5461d" }

[dev-dependencies]
rand = "0.8.0"
rand_distr = "0.4.0"
rand_chacha = "0.2.1"

[features]
default = ["parallel-crypto"]
parallel-crypto = ["ark-poly/parallel", "ark-ec/parallel", "amt/parallel"]
