[package]
name = "amt"
version = "0.1.0"
edition = "2021"

[dependencies]
ark-ec = { workspace = true }
ark-ff = { workspace = true }
ark-poly = { workspace = true }
ark-serialize = { workspace = true }
ark-bls12-381 = { workspace = true }
ark-bn254 = { workspace = true }
ark-std = { workspace = true }

rayon = { workspace = true, optional = true }

rand = { workspace = true }

once_cell = { workspace = true }

anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

base64 = "0.22"

error-chain = { version = "0.12", default-features = false }

[features]
default = []
parallel = ["ark-poly/parallel", "ark-ec/parallel", "ark-std/parallel", "rayon"]
bn254 = []
bls12-381 = []

[[bin]]
name = "build_params"
test = false
bench = false