[package]
name = "ppot2ark"
version = "0.1.0"
edition = "2021"

[dependencies]
amt = { workspace = true }

ark-ec = { workspace = true }
ark-ff = { workspace = true }
ark-serialize = { workspace = true }
ark-bls12-381 = { workspace = true }
ark-bn254 = { workspace = true }
ark-std = { workspace = true }

rayon = { workspace = true, optional = true }

rand = { workspace = true }

anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

pairing_ce = { git = "https://github.com/Conflux-Chain/pot-phase2", rev = "1e7fd60" }
powersoftau = { git = "https://github.com/Conflux-Chain/pot-phase2", rev = "1e7fd60" }

ff = { package = "ff_ce", version = "0.7", features = ["derive"] }
memmap = "0.7.0"

[dev-dependencies]
parking_lot = { workspace = true }
project-root = "0.2"
lazy_static = "1.4"

[features]
default = []
parallel = ["ark-ec/parallel", "ark-std/parallel", "rayon", "amt/parallel"]
bn254 = ["amt/bn254"]
bls12-381 = ["amt/bls12-381"]