[package]
name = "storage"
version = "0.1.0"
edition = "2021"

[dependencies]
amt = { workspace = true }

ark-ec = { workspace = true }
ark-ff = { workspace = true }
ark-poly = { workspace = true }
ark-serialize = { workspace = true }
ark-bls12-381 = { workspace = true }
ark-bn254 = { workspace = true }

parking_lot = { workspace = true }

once_cell = { workspace = true }

thiserror = "1"
auto_impl = "1.2"

#kvdb-rocksdb = "0.19"
kvdb-rocksdb = { git = "https://github.com/Conflux-Chain/parity-common-rocksdb", rev = "3fcd845" }
#kvdb = "0.13"
kvdb = { git = "https://github.com/Conflux-Chain/parity-common-rocksdb", rev = "3fcd845" }

tinyvec = "1.8"

ethereum-types = "0.12"

blake2 = "0.10"

slab = "0.4.9"

static_assertions = "1.1.0"

proptest = "1.5"

[dev-dependencies]
rand = { workspace = true }
rand_distr = "0.4.0"
rand_chacha = "0.2.1"

[features]
default = []
parallel = ["ark-poly/parallel", "ark-ec/parallel", "amt/parallel"]
bn254 = ["amt/bn254"]
bls12-381 = ["amt/bls12-381"]